--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #f2f2f2;
+            background-image: url("bg.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
             padding: 20px;
-			background-image: url("bg.jpg");
-			background-repeat: no-repeat;
-			background-size: cover;
+        }
         .container {
-            background-color: pink;
+            background-color: rgba(255, 192, 203, 0.8); /* Semi-transparent pink */
             padding: 20px;
             border-radius: 5px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -41,16 +42,38 @@
             color: white;
             border: none;
             cursor: pointer;
-			width: 100%;
+            width: 100%;
         }
         .form-group input[type="button"]:hover {
             background-color: #45a049;
         }
-		form{
-		padding : 10px;
-		}
+        form {
+            padding: 10px;
+        }
     </style>
-	<script src="./main.js" type="text/javascript"></script>
+    <script>
+        function validateForm() {
+            var name = document.getElementById('name').value;
+            var email = document.getElementById('email').value;
+            var phone = document.getElementById('phone').value;
+            var errorMessage = '';
+            if (name === '') {
+                errorMessage += 'Please Enter Name.\n';
+            }
+            if (email === '') {
+                errorMessage += 'Please Enter Email.\n';
+            }
+            if (phone === '') {
+                errorMessage += 'Please Enter Phone.\n';
+            }
+            if (errorMessage !== '') {
+                alert(errorMessage);
+                return false;
+            }
+            alert('Form Submitted Successfully.');
+            window.location.href = 'successmessage.html';
+        }
+    </script>
 </head>
 <body>
     <div class="container">
@@ -74,40 +97,4 @@
         </form>
     </div>
 </body>
-<script>
-</head>
-<body>
-    <div class="container">
-        <h2>Registration Completed Successfully...</h2>
-    </div>
-</body>
-</html>
-<!-- alert('Ready'); -->
-function validateForm()
-{
-	var name = document.getElementById('name').value;
-	var email = document.getElementById('email').value;
-	var phone = document.getElementById('phone').value;
-	var errorMessage = '';
-	if(name == '')
-	{
-		errorMessage += 'Please Enter Name.\n';
-	}
-	if(email == '')
-	{
-		errorMessage += 'Please Enter Email.\n';
-	}
-	if(phone == '')
-	{
-		errorMessage += 'Please Enter Phone.\n';
-	}
-	if(errorMessage != '')
-	{
-		alert(errorMessage);return false;
-	}
-	alert('Form Submited Successfully..');
-	window.location.href = 'successmessage.html';
-}
-
-</script>
 </html>
